prusti-tests/tests/cargo_verify/failing_crate/output.stderr
    Checking prusti-contracts v0.1.0 ([..])
    Checking failing_crate v0.1.0 ([..])
error: [Prusti: verification error] precondition might not hold.
 --> src/main.rs:6:5
  |
6 |     requires_large_number(10);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
  |
note: the failing assertion is here
 --> src/utils.rs:3:12
  |
3 | #[requires(x > 999)]
  |            ^^^^^^^

error: aborting due to previous error

error: could not compile `failing_crate`

To learn more, run the command again with --verbose.
